--- a/src/app/containers/Cart/Cart.less
+++ b/src/app/containers/Cart/Cart.less
@@ -14,6 +14,23 @@
       font-size: 18px;
       font-weight: 600;
     }
+    .total {
+      .pricing {
+        display: flex;
+        justify-content:flex-end;
+        justify-self: center;
+        .pricingTitle {
+          font-size: 24px;
+          line-height: 42px;
+        }
+
+        .pricing {
+          font-size: 30px;
+          font-weight: 600;
+          color: #e5704b;
+        }
+      }
+    }
   }
 
   .customerInfo {
