--- a/src/app/containers/DashBoard/components/DashBoard/ElectricalCable/ElectricalCable.less
+++ b/src/app/containers/DashBoard/components/DashBoard/ElectricalCable/ElectricalCable.less
@@ -2,7 +2,6 @@
   .banner {
     display: flex;
     justify-content: center;
-    border: 1px solid #ddd;
 
     .ant-image {
       // width: inherit;
@@ -10,6 +9,9 @@
       justify-content: center;
       flex-direction: column;
       margin: 0 auto;
+      &-img {
+        // object-fit: cover;
+      }
     }
   }
   .ant-spin-container {
