--- a/src/app/containers/Product/components/ProductList/components/GridItemComponent/GridItemComponent.less
+++ b/src/app/containers/Product/components/ProductList/components/GridItemComponent/GridItemComponent.less
@@ -17,12 +17,17 @@
   }
 
   .image {
-    // flex: 1;
-    // width: 100%;
-    width: 236px;
-    // min-width: 236px;
-    // margin-right: 20px;
+    width: 100%;
     margin-bottom: 20px;
+    height: 255px;
+    display: flex;
+    justify-content: center;
+
+    img {
+      object-fit: fill;
+      width: auto;
+      height: 100%;
+    }
   }
 
   .content {
