--- a/src/app/containers/Template/components/Template/components/Footer/components/FooterTopMenu/components/FooterLogo/FooterLogo.less
+++ b/src/app/containers/Template/components/Template/components/Footer/components/FooterTopMenu/components/FooterLogo/FooterLogo.less
@@ -1,8 +1,12 @@
-.logo {
+.footerlogo {
   display: flex;
   flex-direction: column;
   text-align: left;
   padding-left: 2%;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
 
   &-mobile {
     scale: 0.8;
