--- a/src/app/containers/Template/components/Template/components/Header/components/NavTopMenu/NavTopMenu.less
+++ b/src/app/containers/Template/components/Template/components/Header/components/NavTopMenu/NavTopMenu.less
@@ -5,16 +5,19 @@
     .hotLine{
       display: flex;
       justify-content: flex-end;
+      font-size: 11px;
     }
   }
   .secondRow {
     display: flex;
     flex-direction: row;
+    // max-width: 63%;
     .navMenu {
       display: flex;
       background: transparent;
       flex: 1;
       border-bottom: unset;
+      height: 70%;
     }
 
     .logo {
