--- a/src/app/containers/Template/components/Template/components/Header/components/RightMenu/RightMenu.less
+++ b/src/app/containers/Template/components/Template/components/Header/components/RightMenu/RightMenu.less
@@ -1,12 +1,13 @@
 .rightMenu {
   float: right;
-  display: flex;
+  display: block;
   flex-direction: row;
   justify-content: flex-end;
   justify-items: flex-end;
   flex: 1;
   .userDropDown {
     margin-right: 10px;
+    height: 64px;
   }
   .ant-menu-horizontal {
     border-bottom: none;
@@ -14,5 +15,7 @@
   .hotLine {
     display: flex;
     justify-content: flex-end;
+    font-size: 11px;
+    width: 150px;
   }
 }
