--- a/src/app/containers/Admin/SettingPage/components/HomePage/components/CableBlock/CableBlock.less
+++ b/src/app/containers/Admin/SettingPage/components/HomePage/components/CableBlock/CableBlock.less
@@ -3,18 +3,36 @@
     &-body {
       display: flex;
       flex-direction: row;
-      .cableImage {
-        // width: 30%;
-        width: 270px;
-        margin-right: 2rem;
-        flex: 1 1 auto;
-        .ant-upload,
-        .ant-upload-list,
-        .ant-upload-list-picture-card-container {
+      .leftBlock {
+        width: 370px;
+
+        .cableImage {
           width: 100%;
-          height: 100%;
+          margin-right: 2rem;
+          flex: 1 1 auto;
+          .ant-upload,
+          .ant-upload-list,
+          .ant-upload-list-picture-card-container {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .slideImages {
+          display: flex;
+          width: 100%;
+          
+          &-item {
+            width: 25%;
+            .ant-upload,
+            .ant-upload-list,
+            .ant-upload-list-picture-card-container {
+              width: 100%;
+              height: 100%;
+            }
+          }
         }
       }
+      
       .rightBlock {
         width: 100%;
         .rowItem {
@@ -39,9 +57,6 @@
               height: 100%;
             }
           }
-          // .ck {
-          //   width: 100%;
-          // }
         }
       }
     }
