--- a/src/app/containers/DashBoard/components/Banner/Banner.less
+++ b/src/app/containers/DashBoard/components/Banner/Banner.less
@@ -14,8 +14,7 @@
     display: block;
     height: 100%;
     &-img {
-      width: inherit;
-      object-fit: cover;
+      width: 100%;
       height: 100%;
     }
   }
