--- a/src/app/containers/DashBoard/components/DashBoard/LedLight/LedLight.less
+++ b/src/app/containers/DashBoard/components/DashBoard/LedLight/LedLight.less
@@ -2,14 +2,15 @@
   .banner {
     display: flex;
     justify-content: center;
-    border: 1px solid #ddd;
 
     .ant-image {
-      width: auto;
       display: flex;
       justify-content: center;
       flex-direction: column;
       margin: 0 auto;
+      &-img {
+        // object-fit: cover;
+      }
     }
   }
   .items {
