--- a/src/app/containers/Product/components/ProductDetail/components/ProductGallery/ProductGallery.less
+++ b/src/app/containers/Product/components/ProductDetail/components/ProductGallery/ProductGallery.less
@@ -1,25 +1,65 @@
 .productGallery {
-  margin-bottom: 2rem;
-  .ant-image {
-    width: 100%;
-    .selectedImage {
-      border: 1px solid #ddd;
-      margin-bottom: 1rem;
-      padding: 1rem;
-      border-radius: 5px;
-      &* {
-        transition: all 0.2s;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #eee;
+
+  &-image {
+    height: 320px;
+    .ant-image {
+      width: 100%;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      border: 1px solid #eee;
+      &-img,
+      .selectedImage {
+        margin-bottom: 1rem;
+        padding: 1rem;
+        border-radius: 5px;
+
+        object-fit: fill;
+        width: auto;
+        height: 100%;
+        &* {
+          transition: all 0.2s;
+        }
+      }
+
+      &-mask {
+        font-size: 18px;
       }
     }
   }
 
-  .images {
+  &-images {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    // gap: 1rem;
+    height: 81px;
+    padding: 5px;
     .ant-image {
-      width: 25%;
+      width: 20%;
+      height: 100%;
       cursor: pointer;
+      display: flex;
+      justify-content: center;
+
+      &-img {
+        margin-bottom: 1rem;
+        padding: 1rem;
+        border-radius: 5px;
+
+        object-fit: fill;
+        width: auto;
+        height: 100%;
+        &* {
+          transition: all 0.2s;
+        }
+      }
+      &-mask {
+        font-size: 18px;
+      }
     }
   }
 }
