--- a/src/app/containers/Product/components/ProductList/components/ListItemComponent/ListItemComponent.less
+++ b/src/app/containers/Product/components/ProductList/components/ListItemComponent/ListItemComponent.less
@@ -13,7 +13,15 @@
     width: 30%;
     max-width: 268px;
     min-width: 268px;
+    max-height: 272px;
+    display: flex;
+    justify-content: center;
     // margin-right: 20px;
+    img {
+      object-fit: fill;
+      width: auto;
+      height: 100%;
+    }
   }
   .content {
     flex: 1;
